# bevy_fmod

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  STYLEGUIDE.md  build.rs
.cargo/: config.toml
.github/: dependabot.yml
.github/actions/install-platform-dependencies/: action.yml
.github/actions/setup-cache-action/: action.yml
.github/workflows/: ci.yml  ci.yml.disabled
bevy_fmod_build/: Cargo.toml
bevy_fmod_build/src/: lib.rs
crate/: Cargo.toml
crate/src/: lib.rs  play_sound_event.rs  plugin.rs
dynamic_bundler/: Cargo.toml
dynamic_bundler/src/: lib.rs
examples/: audio_control.rs  hello_world.rs  minimal.rs  parameters.rs  spatial.rs
examples/demo_project/: .gitattributes  .gitignore
examples/demo_project/Metadata/: Master.xml  Mixer.xml  Tags.xml  Workspace.xml
examples/demo_project/Metadata/Asset/: {9236312d-a246-4d54-87b8-634b3253fb2f}.xml
examples/demo_project/Metadata/AudioFile/: {7e0c7f88-4969-4e4e-8e13-750b8a9eb08e}.xml
examples/demo_project/Metadata/Bank/: {8edb5369-570d-41bd-94d7-02f213bcf326}.xml
examples/demo_project/Metadata/BankFolder/: {14ac284c-69c1-4bcd-bccb-5c8cfe3bc4fc}.xml
examples/demo_project/Metadata/EffectPresetFolder/: {dd98c5c5-a918-4e03-acc6-c044ea73c3b6}.xml
examples/demo_project/Metadata/EncodingSetting/: {d4c50528-fc91-43bd-90d1-f51b91a8545a}.xml
examples/demo_project/Metadata/Event/: {d9757ebf-88cc-4094-8574-9ba542a7cb9b}.xml
examples/demo_project/Metadata/EventFolder/: {c755c17a-1799-4809-b42e-b5300e44d87c}.xml
examples/demo_project/Metadata/ParameterPresetFolder/: {0344199a-459b-4d78-94f6-27ad7cbcce4e}.xml
examples/demo_project/Metadata/Platform/: {d9172051-f3f1-4ae0-b213-c1441ac05f6f}.xml
examples/demo_project/Metadata/ProfilerFolder/: {08ebe34d-7b52-479b-a8ea-baec630637ef}.xml
examples/demo_project/Metadata/Return/: {5c916d80-6670-41c6-93ed-26617303971b}.xml
examples/demo_project/Metadata/SandboxFolder/: {9959ee2f-07f3-4e46-adc1-62f93384c28a}.xml
examples/demo_project/Metadata/SnapshotGroup/: {09cbc2de-e61c-4e74-bc74-9937d916a808}.xml
examples/hello_world/: Cargo.toml
examples/hello_world/src/: main.rs
src/: attributes_3d.rs  audio_player.rs  error.rs  fmod_plugin.rs  fmod_studio.rs  lib.rs  one_shot_player.rs  play_sound_event.rs  plugin.rs  prelude.rs  sync_wrapped.rs
src/audio_player/: attributes_3d.rs  audio_listener.rs  audio_source.rs
src/components/: audio_listener.rs  audio_source.rs  bundles.rs  mod.rs  user_property.rs  velocity.rs
src/components/geometry/: mod.rs  visibility.rs
src/sync_wrapped/: event_instance.rs
src/utilities/: mod.rs  mute_when_unfocused.rs
