[package]
name = "bevy_fmod"
description = "Idiomatic FMOD in Bevy"
authors = ["Fabian 'Salzian' Fritzsche <bevy_fmod@salzian.dev>"]
edition = "2024"
repository = "https://github.com/salzian/bevy_fmod"
version = "0.7.0"
license = "MIT OR Apache-2.0"

exclude = [
    ".cargo",
    ".github",
    ".idea"
]

[dependencies]
bevy = { version = "0.16.0-rc.3", default-features = false, features = ["bevy_log"] }
libfmod = "~2.222.6"

[dev-dependencies.bevy]
version = "0.16.0-rc.3"
features = [
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_winit",
    "multi_threaded"
]

[features]
default = []
live-update = []

[[example]]
name = "minimal"

[[example]]
name = "audio_control"

[[example]]
name = "spatial"

[[example]]
name = "parameters"

