[dependencies]
libfmod = "~2.222.6"

[dependencies.bevy]
default-features = false
features = ["bevy_log"]
version = "0.17.0-rc.2"

[dev-dependencies.bevy]
features = [
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_winit",
    "multi_threaded",
]
version = "0.17.0-rc.2"

[[example]]
name = "minimal"

[[example]]
name = "audio_control"

[[example]]
name = "spatial"

[[example]]
name = "parameters"

[features]
default = []
live-update = []

[package]
categories = [
    "game-development",
    "multimedia::audio",
]
description = "Idiomatic FMOD in Bevy"
edition = "2024"
exclude = [
    ".cargo",
    ".github",
    ".idea",
]
keywords = [
    "bevy",
    "fmod",
    "audio",
    "gamedev",
]
license = "MIT OR Apache-2.0"
name = "bevy_fmod"
repository = "https://github.com/salzian/bevy_fmod"
version = "0.8.0"
