[dependencies]
libfmod = "~2.222.6"
thiserror = { version = "2", default-features = false }

[dependencies.bevy]
default-features = false
features = ["bevy_log"]
version = "0.17"

[dev-dependencies.bevy]
features = [
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_winit",
    "multi_threaded",
]
version = "0.17"

[[example]]
name = "minimal"

[[example]]
name = "audio_control"

[[example]]
name = "spatial"

[[example]]
name = "parameters"

[features]
default = ["utilities"]
live-update = []
utilities = ["bevy/bevy_window"]

[package]
categories = [
    "game-development",
    "multimedia::audio",
]
description = "Idiomatic FMOD in Bevy"
edition = "2024"
exclude = [
    ".cargo",
    ".github",
    ".idea",
]
keywords = [
    "bevy",
    "fmod",
    "audio",
    "gamedev",
]
license = "MIT OR Apache-2.0"
name = "bevy_fmod"
repository = "https://github.com/salzian/bevy_fmod"
version = "0.9.0"
