[package]
name = "bevy_fmod"
description = "Idiomatic FMOD in Bevy"
authors.workspace = true
version.workspace = true

readme = "../README.md"
license = "MIT OR Apache-2.0"
repository.workspace = true

[dependencies]
anyhow.workspace = true
bevy = { workspace = true, default-features = false }
bevy_mod_sysfail.workspace = true
libfmod = "2.2.607"
